2011-06-20 Sancho Lerena <slerena@artica.es>

	* net_tools
	net_tools/nettool.png: Nettools extension. Allow from interface
	several operations like ping the host, do a traceroute, get whois
	/dig information, get SNMP device information and interface status

2011-06-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php: Added initialization variable 
	value.

2011-06-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	include/functions_tags.php: Correct a mistake that doesn't allow
	to create network modules correctly.

2011-06-20  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Fixed total events query
	used in pagination

2011-06-17  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/alert_actions.php: Aesthetic fix.

2011-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fixed duplication of comments
	when validate events merged from 3.2.1

2011-06-16 Sancho Lerena <slerena@artica.es>

    * include/styles/install.css,
    include/styles/pandora.css,
    install.php: Yeeeha!, new look & feel for 4.0 version ! :-)

    * index.php: Minimal changes in session close (after the header render).

    * images/greyback.gif: New background for 4.0 (included the installer)

    * COPYING: removed bad carriage returns.

    * general/login_page.php: Small modifications to have a better style.

    * operation/system_alert.php,
    include/javascript/jquery.pandora.js,
    general/header.php: Implemented a "alert" icon who shows the general
    problems, instead naggin the user in each page. Incorporated the new 
    feature to warn user when he doesn't change the default password :-)

2011-06-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merge from the branch.
	
	* godmode/alerts/alert_actions.php: fixed the url to copy the alert action.
	The file didn't upload to repository.

2011-06-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
